# rustmc

./: Cargo.toml  README.md
src/: main.rs
src/coding/: encoder.rs  mod.rs
src/networking/: packet.rs
src/types/: chat.rs  identifier.rs  mod.rs  slot.rs
